--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <h2>This is a pati mastan</h2>
     <h5>I live in dhaka</h5>
     <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
+    <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
+    <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
+    <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
 </body>
 </html>
