--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
     <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
     <p>pati mastani koira jibon chalai, ar manusher gali khai</p>
+
+    <div>
+        <h2>this is a new blog post</h2>
+        <h6>this post created by add-blog</h6>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptate asperiores, molestiae recusandae aut maiores ipsam praesentium quaerat quia expedita.</p>
+    </div>
 </body>
 </html>
