--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
         <h6>this post created by add-blog</h6>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptate asperiores, molestiae recusandae aut maiores ipsam praesentium quaerat quia expedita.</p>
     </div>
+
+    <div>
+        <h2>Checkout for merge conflicts</h2>
+        <p>Sadia tumi kar? tumi shudhu add-blog er</p>
+    </div>
 </body>
 </html>
