sadia shudhu amar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div>
         <h2>Checkout for merge conflicts</h2>
-        <p>Sadia tumi kar? tumi shudhu add-blog er</p>
+        <p>Sadia tumi kar? tumi onno karo hote paro na, tumi shudhu main branch er.</p>
     </div>
 </body>
 </html>
