--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div>
         <h2>Checkout for merge conflicts</h2>
         <p>Sadia tumi kar? tumi shudhu add-blog er</p>
+        <p>checking the merge conflict</p>
     </div>
 </body>
 </html>
