--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div>
         <h2>Checkout for merge conflicts</h2>
-        <p>Sadia tumi kar? tumi shudhu add-blog er</p>
+        <p>Sadia tumi kar? tumi shudhu add-blog er tai naki?</p>
         <p>checking the merge conflict</p>
     </div>
 </body>
